--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-streamlit
+streamlit==1.36.0 # Use a versão que você testou localmente
+streamlit-autorefresh==0.3.0
 ftplib
-Pillow
+Pillow==10.3.0
+pytz==2024.1
+opencv-python-headless==4.10.0.84 # Esta é crítica e pode falhar em ambientes específicos
+ultralytics==8.2.51 # Versão que você está usando
