--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit
+treamlit
 streamlit-autorefresh
-Pillow
-pytz
-opencv-python-headless
+opencv-python-headless==4.12.0.88
 ultralytics
-opencv-python
-opencv-python-headless
