--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-treamlit
+streamlit
 streamlit-autorefresh
-opencv-python-headless==4.12.0.88
+Pillow
+pytz
+opencv-python-headless
 ultralytics
+opencv-python
+opencv-python-headless
